FIX: overflow issues

--- a/src/app/features/checkout/checkout.component.scss
+++ b/src/app/features/checkout/checkout.component.scss
@@ -251,7 +251,6 @@
           .mat-mdc-tab {
             height: 48px;
             border-radius: 5px;
-            overflow: hidden;
             transition: all 0.3s ease;
             opacity: 1;
             color: var(--text-secondary);
