--- a/src/app/features/products/components/product-filter/product-filter.component.scss
+++ b/src/app/features/products/components/product-filter/product-filter.component.scss
@@ -1,6 +1,8 @@
 .filter-sidebar {
   padding: 20px;
   height: 100%;
+  max-height: 100vh; 
+  overflow-y: auto; 
   
   .sidebar-header {
     display: flex;
@@ -38,7 +40,6 @@
       .mat-mdc-list-option {
         border-radius: 8px;
         margin-bottom: 5px;
-        overflow: hidden;
         
         .mdc-list-item__primary-text {
           display: flex;
